cabal-version:      3.0
name:               help6507
version:            0.0.0
-- synopsis:
-- description:
license:            BSD-2-Clause
license-file:       LICENSE
author:             nks
maintainer:         nks@9k.vc
-- copyright:
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable friend
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    
      base ^>=4.18.2.0,
      lens,
      text
    hs-source-dirs:   app
    default-language: Haskell2010
